# pyo3_inheritance

./: .gitignore  Cargo.toml  README.md
base_lib/: Cargo.toml
base_lib/src/: base_class.rs  lib.rs
sub1_lib/: Cargo.toml  Makefile  pyproject.toml
sub1_lib/src/: lib.rs  sub1_class.rs
sub1_lib/sub1_lib/: __init__.py
sub1_lib/tests/: test_sub1.py
