[project]
name = "sub1_lib"

[tool.poetry]
name = "sub1_lib"
version = "0.1.0"
description = "Pyo3 Inheritance"
authors = ["Gregory <gregory@recom.live>"]

[tool.poetry.dependencies]
wheel = "*"
atomicwrites = "*"
maturin = "*"
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "^2.20.0"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

